logs/huimages.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CouchDB-1.1.dist-info'...
Listing './lib/python3.5/site-packages/boto'...
Listing './lib/python3.5/site-packages/boto/awslambda'...
Listing './lib/python3.5/site-packages/boto/beanstalk'...
Listing './lib/python3.5/site-packages/boto/cacerts'...
Listing './lib/python3.5/site-packages/boto/cloudformation'...
Listing './lib/python3.5/site-packages/boto/cloudfront'...
Listing './lib/python3.5/site-packages/boto/cloudhsm'...
Listing './lib/python3.5/site-packages/boto/cloudsearch'...
Listing './lib/python3.5/site-packages/boto/cloudsearch2'...
Listing './lib/python3.5/site-packages/boto/cloudsearchdomain'...
Listing './lib/python3.5/site-packages/boto/cloudtrail'...
Listing './lib/python3.5/site-packages/boto/codedeploy'...
Listing './lib/python3.5/site-packages/boto/cognito'...
Listing './lib/python3.5/site-packages/boto/cognito/identity'...
Listing './lib/python3.5/site-packages/boto/cognito/sync'...
Listing './lib/python3.5/site-packages/boto/configservice'...
Listing './lib/python3.5/site-packages/boto/contrib'...
Listing './lib/python3.5/site-packages/boto/datapipeline'...
Listing './lib/python3.5/site-packages/boto/directconnect'...
Listing './lib/python3.5/site-packages/boto/dynamodb'...
Listing './lib/python3.5/site-packages/boto/dynamodb2'...
Listing './lib/python3.5/site-packages/boto/ec2'...
Listing './lib/python3.5/site-packages/boto/ec2/autoscale'...
Listing './lib/python3.5/site-packages/boto/ec2/cloudwatch'...
Listing './lib/python3.5/site-packages/boto/ec2/elb'...
Listing './lib/python3.5/site-packages/boto/ec2containerservice'...
Listing './lib/python3.5/site-packages/boto/ecs'...
Listing './lib/python3.5/site-packages/boto/elasticache'...
Listing './lib/python3.5/site-packages/boto/elastictranscoder'...
Listing './lib/python3.5/site-packages/boto/emr'...
Listing './lib/python3.5/site-packages/boto/file'...
Listing './lib/python3.5/site-packages/boto/fps'...
Listing './lib/python3.5/site-packages/boto/glacier'...
Listing './lib/python3.5/site-packages/boto/gs'...
Listing './lib/python3.5/site-packages/boto/iam'...
Listing './lib/python3.5/site-packages/boto/kinesis'...
Listing './lib/python3.5/site-packages/boto/kms'...
Listing './lib/python3.5/site-packages/boto/logs'...
Listing './lib/python3.5/site-packages/boto/machinelearning'...
Listing './lib/python3.5/site-packages/boto/manage'...
Listing './lib/python3.5/site-packages/boto/mashups'...
Listing './lib/python3.5/site-packages/boto/mturk'...
Listing './lib/python3.5/site-packages/boto/mws'...
Listing './lib/python3.5/site-packages/boto/opsworks'...
Listing './lib/python3.5/site-packages/boto/pyami'...
Listing './lib/python3.5/site-packages/boto/pyami/installers'...
Listing './lib/python3.5/site-packages/boto/pyami/installers/ubuntu'...
Listing './lib/python3.5/site-packages/boto/rds'...
Listing './lib/python3.5/site-packages/boto/rds2'...
Listing './lib/python3.5/site-packages/boto/redshift'...
Listing './lib/python3.5/site-packages/boto/roboto'...
Listing './lib/python3.5/site-packages/boto/route53'...
Listing './lib/python3.5/site-packages/boto/route53/domains'...
Listing './lib/python3.5/site-packages/boto/s3'...
Listing './lib/python3.5/site-packages/boto/sdb'...
Listing './lib/python3.5/site-packages/boto/sdb/db'...
Listing './lib/python3.5/site-packages/boto/sdb/db/manager'...
Listing './lib/python3.5/site-packages/boto/services'...
Listing './lib/python3.5/site-packages/boto/ses'...
Listing './lib/python3.5/site-packages/boto/sns'...
Listing './lib/python3.5/site-packages/boto/sqs'...
Listing './lib/python3.5/site-packages/boto/sts'...
Listing './lib/python3.5/site-packages/boto/support'...
Listing './lib/python3.5/site-packages/boto/swf'...
Listing './lib/python3.5/site-packages/boto/vendored'...
Listing './lib/python3.5/site-packages/boto/vendored/regions'...
Listing './lib/python3.5/site-packages/boto/vpc'...
Listing './lib/python3.5/site-packages/boto-2.48.0.dist-info'...
Listing './lib/python3.5/site-packages/couchdb'...
Listing './lib/python3.5/site-packages/couchdb/tests'...
Listing './lib/python3.5/site-packages/couchdb/tools'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/demo'...
Compiling './lib/python3.5/site-packages/demo/imageserver_import.py'...
***   File "./lib/python3.5/site-packages/demo/imageserver_import.py", line 61
    print db[doc_id]
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/demo/imagestuff.py'...
***   File "./lib/python3.5/site-packages/demo/imagestuff.py", line 107
    print db[doc_id]
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/huImages-2.2.egg-info'...
Listing './lib/python3.5/site-packages/huTools'...
Compiling './lib/python3.5/site-packages/huTools/NetStringIO.py'...
***   File "./lib/python3.5/site-packages/huTools/NetStringIO.py", line 147
    print "Writing a Netstring ... ",
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/huTools/_decorator.py'...
***   File "./lib/python3.5/site-packages/huTools/_decorator.py", line 111
    exec code in evaldict
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/huTools/async.py'...
***   File "./lib/python3.5/site-packages/huTools/async.py", line 52
    raise self.__excpt[0], self.__excpt[1], self.__excpt[2]
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/huTools/calendar'...
Compiling './lib/python3.5/site-packages/huTools/calendar/count_weekends.py'...
***   File "./lib/python3.5/site-packages/huTools/calendar/count_weekends.py", line 78
    print dt1
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/huTools/daemon.py'...
***   File "./lib/python3.5/site-packages/huTools/daemon.py", line 62
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/huTools/http'...
Listing './lib/python3.5/site-packages/huTools/http/_httplib2'...
Compiling './lib/python3.5/site-packages/huTools/http/_httplib2/__init__.py'...
***   File "./lib/python3.5/site-packages/huTools/http/_httplib2/__init__.py", line 784
    print "connect: (%s, %s)" % (self.host, self.port)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/huTools/http/engine_appengine.py'...
***   File "./lib/python3.5/site-packages/huTools/http/engine_appengine.py", line 54
    except urlfetch_errors.DownloadError, exception:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/huTools/postmark.py'...
***   File "./lib/python3.5/site-packages/huTools/postmark.py", line 107
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/huTools/protocols.py'...
***   File "./lib/python3.5/site-packages/huTools/protocols.py", line 19
    print "NICHT MEHR NUTZEN!"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/huTools/unicode.py'...
***   File "./lib/python3.5/site-packages/huTools/unicode.py", line 57
    except UnicodeEncodeError, msg:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/huTools-0.63.egg-info'...
Listing './lib/python3.5/site-packages/huimages'...
Listing './lib/python3.5/site-packages/huimages/imagebrowser'...
Listing './lib/python3.5/site-packages/huimages/imagebrowser/templates'...
Listing './lib/python3.5/site-packages/huimages/imagebrowser/templates/imagebrowser'...
Compiling './lib/python3.5/site-packages/huimages/server.py'...
***   File "./lib/python3.5/site-packages/huimages/server.py", line 238
    print 'Starting up HTTP server on port %i...' % PORT
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
